--- a/client/src/styles/registration_styles.css
+++ b/client/src/styles/registration_styles.css
@@ -44,6 +44,11 @@
     width: 100%;
 }
 
+.regform2 {
+    padding-top: 2.5%;
+    width: 100%;
+}
+
 @media screen and (max-width: 768px) {
     .regform {
         padding-top: 15%;
@@ -69,6 +74,22 @@
   .form-container > * + * {
     margin-top: 20px;
   }
+
+
+  .form-container2 {
+    margin-left: auto;
+    margin-right: auto;
+    width: 92%;
+    margin-bottom: 20px;
+    background-color: #E5E7EB;
+    border-radius: 20px;
+    padding: 3%;
+  }
+  
+  .form-container2 > * + * {
+    margin-top: 20px;
+  }
+
 
   /* Media query for screens smaller than 768px (tablets and phones) */
 @media (max-width: 768px) {
